--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "thirdweb-token-marketplace",
+  "name": "rwa.oohhwwee.io",
   "version": "1.0.0",
   "private": true,
   "description": "A modern, black-themed token marketplace and cross-chain bridge built with Next.js, React, Tailwind CSS, and the thirdweb SDK.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/YOUR_GITHUB_USERNAME/thirdweb-token-marketplace.git"
+    "url": "https://github.com/oohhwwee/rwa.oohhwwee.io.git"
   },
-  "homepage": "https://github.com/YOUR_GITHUB_USERNAME/thirdweb-token-marketplace",
-  "author": "YOUR NAME",
+  "homepage": "https://github.com/oohhwwee/rwa.oohhwwee.io",
+  "author": "Oohhwwee",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
